# satfs

./: .gitignore  CONFIG.md  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: black_check.yml  pytest.yml
examples/conf/: satfs-vagrant.yml  vagrant-debian-bookworm-privileged.yml  vagrant-debian-bookworm-unpriv.yml  vagrant-debian-bookworm.yml  vagrant-debian-testing.yml  vagrant-debian-trixie-privileged.yml  vagrant-debian-trixie-unpriv.yml
examples/conf/common/: perms.yml  vagrant_rules.yml
satfs/: cache.py  config.py  fuse.py  gui.py  proc.py  process.py  satlog.py  validator.py
tests/: full_test.sh  pytest.ini  requirements.txt  test_config.py
tests/vagrant/: Vagrantfile  conftest.py  pytest.ini  test_full.py  test_pip_install.py
tests/vagrant/remote/: test_proc.py  test_process.py
