[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satfs"
version = "0.1.dev"
description = "FUSE-based access control layer that protects a directory and its subtree"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jérémy Ruffet", email = "sat@airnux.fr" }
]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.scripts]
satfs = "main:main"

[tool.setuptools]
packages = ["satfs"]
py-modules = ["main"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.black]
line-length = 110
